--- a/lib/css/tabulator_midnight.css
+++ b/lib/css/tabulator_midnight.css
@@ -1,4 +1,4 @@
-/* Tabulator v4.5.1 (c) Oliver Folkerd */
+/* Tabulator v4.6.3 (c) Oliver Folkerd */
 .tabulator {
   position: relative;
   border: 1px solid #333;
@@ -16,7 +16,6 @@
 
 .tabulator.tabulator-block-select {
   -webkit-user-select: none;
-     -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
 }
@@ -65,6 +64,15 @@
   padding: 4px;
 }
 
+.tabulator .tabulator-header .tabulator-col .tabulator-col-content .tabulator-header-menu-button {
+  padding: 0 8px;
+}
+
+.tabulator .tabulator-header .tabulator-col .tabulator-col-content .tabulator-header-menu-button:hover {
+  cursor: pointer;
+  opacity: .6;
+}
+
 .tabulator .tabulator-header .tabulator-col .tabulator-col-content .tabulator-col-title {
   box-sizing: border-box;
   width: 100%;
@@ -101,20 +109,11 @@
   display: flex;
   border-top: 1px solid #aaa;
   overflow: hidden;
-}
-
-.tabulator .tabulator-header .tabulator-col.tabulator-col-group .tabulator-col-group-cols .tabulator-col:last-child {
   margin-right: -1px;
 }
 
 .tabulator .tabulator-header .tabulator-col:first-child .tabulator-col-resize-handle.prev {
   display: none;
-}
-
-.tabulator .tabulator-header .tabulator-col.ui-sortable-helper {
-  position: absolute;
-  background-color: #1a1a1a !important;
-  border: 1px solid #aaa;
 }
 
 .tabulator .tabulator-header .tabulator-col .tabulator-header-filter {
@@ -260,10 +259,8 @@
 }
 
 .tabulator .tabulator-tableHolder .tabulator-placeholder[tabulator-render-mode="virtual"] {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
+  min-height: 100%;
+  min-width: 100%;
 }
 
 .tabulator .tabulator-tableHolder .tabulator-placeholder span {
@@ -759,6 +756,39 @@
   color: #666;
 }
 
+.tabulator-menu {
+  position: absolute;
+  display: inline-block;
+  box-sizing: border-box;
+  background: #666;
+  border: 1px solid #888;
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
+  font-size: 14px;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
+  z-index: 10000;
+}
+
+.tabulator-menu .tabulator-menu-item {
+  padding: 5px 10px;
+  -webkit-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.tabulator-menu .tabulator-menu-item.tabulator-menu-item-disabled {
+  opacity: .5;
+}
+
+.tabulator-menu .tabulator-menu-item:not(.tabulator-menu-item-disabled):hover {
+  cursor: pointer;
+  background: #444;
+}
+
+.tabulator-menu .tabulator-menu-separator {
+  border-top: 1px solid #888;
+}
+
 .tabulator-edit-select-list {
   position: absolute;
   display: inline-block;
@@ -788,6 +818,12 @@
   background: #666;
 }
 
+.tabulator-edit-select-list .tabulator-edit-select-list-notice {
+  padding: 4px;
+  color: #fff;
+  text-align: center;
+}
+
 .tabulator-edit-select-list .tabulator-edit-select-list-group {
   border-bottom: 1px solid #888;
   padding: 4px;
@@ -811,4 +847,74 @@ body.tabulator-print-fullscreen-hide > *:not(.tabulator-print-fullscreen) {
 
 .tabulator-print-table {
   border-collapse: collapse;
+}
+
+.tabulator-print-table .tabulator-data-tree-branch {
+  display: inline-block;
+  vertical-align: middle;
+  height: 9px;
+  width: 7px;
+  margin-top: -9px;
+  margin-right: 5px;
+  border-bottom-left-radius: 1px;
+  border-left: 2px solid #888;
+  border-bottom: 2px solid #888;
+}
+
+.tabulator-print-table .tabulator-data-tree-control {
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -ms-flex-align: center;
+      align-items: center;
+  vertical-align: middle;
+  height: 11px;
+  width: 11px;
+  margin-right: 5px;
+  border: 1px solid #fff;
+  border-radius: 2px;
+  background: rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+}
+
+.tabulator-print-table .tabulator-data-tree-control:hover {
+  cursor: pointer;
+  background: rgba(0, 0, 0, 0.2);
+}
+
+.tabulator-print-table .tabulator-data-tree-control .tabulator-data-tree-control-collapse {
+  display: inline-block;
+  position: relative;
+  height: 7px;
+  width: 1px;
+  background: transparent;
+}
+
+.tabulator-print-table .tabulator-data-tree-control .tabulator-data-tree-control-collapse:after {
+  position: absolute;
+  content: "";
+  left: -3px;
+  top: 3px;
+  height: 1px;
+  width: 7px;
+  background: #fff;
+}
+
+.tabulator-print-table .tabulator-data-tree-control .tabulator-data-tree-control-expand {
+  display: inline-block;
+  position: relative;
+  height: 7px;
+  width: 1px;
+  background: #fff;
+}
+
+.tabulator-print-table .tabulator-data-tree-control .tabulator-data-tree-control-expand:after {
+  position: absolute;
+  content: "";
+  left: -3px;
+  top: 3px;
+  height: 1px;
+  width: 7px;
+  background: #fff;
 }
