--- a/lib/css/tabulator_modern.css
+++ b/lib/css/tabulator_modern.css
@@ -1,4 +1,4 @@
-/* Tabulator v4.5.1 (c) Oliver Folkerd */
+/* Tabulator v4.6.3 (c) Oliver Folkerd */
 .tabulator {
   position: relative;
   border: 1px solid #fff;
@@ -16,7 +16,6 @@
 
 .tabulator.tabulator-block-select {
   -webkit-user-select: none;
-     -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
 }
@@ -68,6 +67,15 @@
   padding: 4px;
 }
 
+.tabulator .tabulator-header .tabulator-col .tabulator-col-content .tabulator-header-menu-button {
+  padding: 0 8px;
+}
+
+.tabulator .tabulator-header .tabulator-col .tabulator-col-content .tabulator-header-menu-button:hover {
+  cursor: pointer;
+  opacity: .6;
+}
+
 .tabulator .tabulator-header .tabulator-col .tabulator-col-content .tabulator-col-title {
   box-sizing: border-box;
   width: 100%;
@@ -105,20 +113,11 @@
   display: flex;
   border-top: 2px solid #3759D7;
   overflow: hidden;
-}
-
-.tabulator .tabulator-header .tabulator-col.tabulator-col-group .tabulator-col-group-cols .tabulator-col:last-child {
   margin-right: -1px;
 }
 
 .tabulator .tabulator-header .tabulator-col:first-child .tabulator-col-resize-handle.prev {
   display: none;
-}
-
-.tabulator .tabulator-header .tabulator-col.ui-sortable-helper {
-  position: absolute;
-  background-color: #e6e6e6 !important;
-  border: 1px solid #fff;
 }
 
 .tabulator .tabulator-header .tabulator-col .tabulator-header-filter {
@@ -265,10 +264,8 @@
 }
 
 .tabulator .tabulator-tableHolder .tabulator-placeholder[tabulator-render-mode="virtual"] {
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
+  min-height: 100%;
+  min-width: 100%;
 }
 
 .tabulator .tabulator-tableHolder .tabulator-placeholder span {
@@ -360,6 +357,10 @@
   background: none;
 }
 
+.tabulator .tabulator-footer .tabulator-calcs-holder .tabulator-row .tabulator-cell:first-child {
+  border-left: 10px solid transparent;
+}
+
 .tabulator .tabulator-footer .tabulator-calcs-holder:only-child {
   margin-bottom: -5px;
   border-bottom: none;
@@ -448,9 +449,11 @@
   box-sizing: border-box;
   box-sizing: border-box;
   min-height: 24px;
-  background-color: #3759D7;
-  padding-left: 10px !important;
   margin-bottom: 2px;
+}
+
+.tabulator-row .tabulator-cell:first-child {
+  border-left: 10px solid #3759D7;
 }
 
 .tabulator-row:nth-child(even) {
@@ -459,6 +462,10 @@
 
 .tabulator-row:nth-child(even) .tabulator-cell {
   background-color: #fff;
+}
+
+.tabulator-row:nth-child(even) .tabulator-cell:first-child {
+  border-left: 10px solid #627ce0;
 }
 
 .tabulator-row.tabulator-selectable:hover {
@@ -511,7 +518,6 @@
 }
 
 .tabulator-row .tabulator-frozen.tabulator-frozen-left {
-  padding-left: 10px;
   border-right: 2px solid #fff;
 }
 
@@ -584,6 +590,8 @@
   display: inline-flex;
   -ms-flex-align: center;
       align-items: center;
+  -ms-flex-pack: center;
+      justify-content: center;
   -moz-user-select: none;
   -khtml-user-select: none;
   -webkit-user-select: none;
@@ -781,6 +789,39 @@
   color: #3759D7;
 }
 
+.tabulator-menu {
+  position: absolute;
+  display: inline-block;
+  box-sizing: border-box;
+  background: #f3f3f3;
+  border: 1px solid #fff;
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
+  font-size: 16px;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
+  z-index: 10000;
+}
+
+.tabulator-menu .tabulator-menu-item {
+  padding: 5px 10px;
+  -webkit-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.tabulator-menu .tabulator-menu-item.tabulator-menu-item-disabled {
+  opacity: .5;
+}
+
+.tabulator-menu .tabulator-menu-item:not(.tabulator-menu-item-disabled):hover {
+  cursor: pointer;
+  background: #fff;
+}
+
+.tabulator-menu .tabulator-menu-separator {
+  border-top: 1px solid #fff;
+}
+
 .tabulator-edit-select-list {
   position: absolute;
   display: inline-block;
@@ -810,6 +851,12 @@
   background: #1D68CD;
 }
 
+.tabulator-edit-select-list .tabulator-edit-select-list-notice {
+  padding: 4px;
+  color: #333;
+  text-align: center;
+}
+
 .tabulator-edit-select-list .tabulator-edit-select-list-group {
   border-bottom: 1px solid #fff;
   padding: 4px;
@@ -833,4 +880,74 @@ body.tabulator-print-fullscreen-hide > *:not(.tabulator-print-fullscreen) {
 
 .tabulator-print-table {
   border-collapse: collapse;
+}
+
+.tabulator-print-table .tabulator-data-tree-branch {
+  display: inline-block;
+  vertical-align: middle;
+  height: 9px;
+  width: 7px;
+  margin-top: -9px;
+  margin-right: 5px;
+  border-bottom-left-radius: 1px;
+  border-left: 2px solid #fff;
+  border-bottom: 2px solid #fff;
+}
+
+.tabulator-print-table .tabulator-data-tree-control {
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -ms-flex-pack: center;
+      justify-content: center;
+  -ms-flex-align: center;
+      align-items: center;
+  vertical-align: middle;
+  height: 11px;
+  width: 11px;
+  margin-right: 5px;
+  border: 1px solid #333;
+  border-radius: 2px;
+  background: rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+}
+
+.tabulator-print-table .tabulator-data-tree-control:hover {
+  cursor: pointer;
+  background: rgba(0, 0, 0, 0.2);
+}
+
+.tabulator-print-table .tabulator-data-tree-control .tabulator-data-tree-control-collapse {
+  display: inline-block;
+  position: relative;
+  height: 7px;
+  width: 1px;
+  background: transparent;
+}
+
+.tabulator-print-table .tabulator-data-tree-control .tabulator-data-tree-control-collapse:after {
+  position: absolute;
+  content: "";
+  left: -3px;
+  top: 3px;
+  height: 1px;
+  width: 7px;
+  background: #333;
+}
+
+.tabulator-print-table .tabulator-data-tree-control .tabulator-data-tree-control-expand {
+  display: inline-block;
+  position: relative;
+  height: 7px;
+  width: 1px;
+  background: #333;
+}
+
+.tabulator-print-table .tabulator-data-tree-control .tabulator-data-tree-control-expand:after {
+  position: absolute;
+  content: "";
+  left: -3px;
+  top: 3px;
+  height: 1px;
+  width: 7px;
+  background: #333;
 }
