--- a/lib/css/tabulator_materialize.css
+++ b/lib/css/tabulator_materialize.css
@@ -1,8 +1,8 @@
 .tabulator {
   position: relative;
-  border: 1px solid #999;
+  border: 1px solid rgba(0, 0, 0, 0.12);
   background-color: #fff;
-  font-size: 14px;
+  font-size: 16px;
   text-align: left;
   overflow: hidden;
   -webkit-transform: translateZ(0);
@@ -32,7 +32,7 @@
   position: relative;
   box-sizing: border-box;
   width: 100%;
-  border-bottom: 1px solid #999;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
   background-color: #fff;
   color: #555;
   font-weight: bold;
@@ -64,7 +64,7 @@
   box-sizing: border-box;
   flex-direction: column;
   justify-content: flex-start;
-  border-right: 1px solid #ddd;
+  border-right: 1px solid #aaa;
   background: #fff;
   text-align: left;
   vertical-align: bottom;
@@ -73,7 +73,7 @@
 
 .tabulator .tabulator-header .tabulator-col.tabulator-moving {
   position: absolute;
-  border: 1px solid #999;
+  border: 1px solid rgba(0, 0, 0, 0.12);
   background: #e6e6e6;
   pointer-events: none;
 }
@@ -84,7 +84,7 @@
 }
 
 .tabulator .tabulator-header .tabulator-col.tabulator-range-selected {
-  background-color: #3876ca;
+  background-color: #e94047;
   color: #FFFFFF;
 }
 
@@ -153,7 +153,7 @@
 .tabulator .tabulator-header .tabulator-col.tabulator-col-group .tabulator-col-group-cols {
   position: relative;
   display: flex;
-  border-top: 1px solid #ddd;
+  border-top: 1px solid #aaa;
   overflow: hidden;
   margin-right: -1px;
 }
@@ -276,19 +276,19 @@
 }
 
 .tabulator .tabulator-header .tabulator-frozen.tabulator-frozen-left {
-  border-right: 2px solid #ddd;
+  border-right: 2px solid rgba(0, 0, 0, 0.12);
 }
 
 .tabulator .tabulator-header .tabulator-frozen.tabulator-frozen-right {
-  border-left: 2px solid #ddd;
+  border-left: 2px solid rgba(0, 0, 0, 0.12);
 }
 
 .tabulator .tabulator-header .tabulator-calcs-holder {
   box-sizing: border-box;
   display: inline-block;
   background: white !important;
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
+  border-top: 1px solid rgba(0, 0, 0, 0.12);
+  border-bottom: 1px solid #aaa;
 }
 
 .tabulator .tabulator-header .tabulator-calcs-holder .tabulator-row {
@@ -353,15 +353,15 @@
 
 .tabulator .tabulator-tableholder .tabulator-table .tabulator-row.tabulator-calcs {
   font-weight: bold;
-  background: #f2f2f2 !important;
+  background: #ebebeb !important;
 }
 
 .tabulator .tabulator-tableholder .tabulator-table .tabulator-row.tabulator-calcs.tabulator-calcs-top {
-  border-bottom: 2px solid #ddd;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.12);
 }
 
 .tabulator .tabulator-tableholder .tabulator-table .tabulator-row.tabulator-calcs.tabulator-calcs-bottom {
-  border-top: 2px solid #ddd;
+  border-top: 2px solid rgba(0, 0, 0, 0.12);
 }
 
 .tabulator .tabulator-tableholder .tabulator-range-overlay {
@@ -374,7 +374,7 @@
 .tabulator .tabulator-tableholder .tabulator-range-overlay .tabulator-range {
   position: absolute;
   box-sizing: border-box;
-  border: 1px solid #2975DD;
+  border: 1px solid #e94047;
 }
 
 .tabulator .tabulator-tableholder .tabulator-range-overlay .tabulator-range.tabulator-range-active::after {
@@ -384,19 +384,19 @@
   bottom: -3px;
   width: 6px;
   height: 6px;
-  background-color: #2975DD;
+  background-color: #e94047;
   border-radius: 999px;
 }
 
 .tabulator .tabulator-tableholder .tabulator-range-overlay .tabulator-range-cell-active {
   position: absolute;
   box-sizing: border-box;
-  border: 2px solid #2975DD;
+  border: 2px solid #e94047;
 }
 
 .tabulator .tabulator-footer {
-  border-top: 1px solid #999;
-  background-color: #fff;
+  border-top: 1px solid rgba(0, 0, 0, 0.12);
+  background-color: #e6e6e6;
   color: #555;
   font-weight: bold;
   white-space: nowrap;
@@ -423,15 +423,15 @@
   box-sizing: border-box;
   width: 100%;
   text-align: left;
-  background: white !important;
-  border-bottom: 1px solid #ddd;
-  border-top: 1px solid #ddd;
+  background: #f3f3f3 !important;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+  border-top: 1px solid rgba(0, 0, 0, 0.12);
   overflow: hidden;
 }
 
 .tabulator .tabulator-footer .tabulator-calcs-holder .tabulator-row {
   display: inline-block;
-  background: white !important;
+  background: #f3f3f3 !important;
 }
 
 .tabulator .tabulator-footer .tabulator-calcs-holder .tabulator-row .tabulator-col-resize-handle {
@@ -464,7 +464,7 @@
   display: inline-block;
   margin: 0 5px;
   padding: 2px 5px;
-  border: 1px solid #aaa;
+  border: 1px solid rgba(0, 0, 0, 0.12);
   border-radius: 3px;
 }
 
@@ -476,13 +476,13 @@
   display: inline-block;
   margin: 0 2px;
   padding: 2px 5px;
-  border: 1px solid #aaa;
+  border: 1px solid rgba(0, 0, 0, 0.12);
   border-radius: 3px;
   background: rgba(255, 255, 255, 0.2);
 }
 
 .tabulator .tabulator-footer .tabulator-page.active {
-  color: #d00;
+  color: #ee6e73;
 }
 
 .tabulator .tabulator-footer .tabulator-page:disabled {
@@ -554,28 +554,28 @@
 .tabulator-row {
   position: relative;
   box-sizing: border-box;
-  min-height: 22px;
+  min-height: 24px;
   background-color: #fff;
 }
 
 .tabulator-row.tabulator-row-even {
-  background-color: #fff;
+  background-color: #f8f8f8;
 }
 
 @media (hover: hover) and (pointer: fine) {
   .tabulator-row.tabulator-selectable:hover {
-    background-color: #bbb;
+    background-color: #f8f8f8;
     cursor: pointer;
   }
 }
 
 .tabulator-row.tabulator-selected {
-  background-color: #9ABCEA;
+  background-color: #ee6e73;
 }
 
 @media (hover: hover) and (pointer: fine) {
   .tabulator-row.tabulator-selected:hover {
-    background-color: #769BCC;
+    background-color: #ee6e73;
     cursor: pointer;
   }
 }
@@ -587,8 +587,8 @@
 
 .tabulator-row.tabulator-moving {
   position: absolute;
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
+  border-top: 1px solid rgba(0, 0, 0, 0.12);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
   pointer-events: none;
   z-index: 15;
 }
@@ -599,12 +599,12 @@
 }
 
 .tabulator-row.tabulator-range-highlight.tabulator-range-selected .tabulator-cell.tabulator-range-row-header {
-  background-color: #3876ca;
+  background-color: #e94047;
   color: #FFFFFF;
 }
 
 .tabulator-row.tabulator-range-selected .tabulator-cell.tabulator-range-row-header {
-  background-color: #3876ca;
+  background-color: #e94047;
   color: #FFFFFF;
 }
 
@@ -630,8 +630,8 @@
 .tabulator-row .tabulator-responsive-collapse {
   box-sizing: border-box;
   padding: 5px;
-  border-top: 1px solid #ddd;
-  border-bottom: 1px solid #ddd;
+  border-top: 1px solid rgba(0, 0, 0, 0.12);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
 }
 
 .tabulator-row .tabulator-responsive-collapse:empty {
@@ -639,7 +639,7 @@
 }
 
 .tabulator-row .tabulator-responsive-collapse table {
-  font-size: 14px;
+  font-size: 16px;
 }
 
 .tabulator-row .tabulator-responsive-collapse table tr td {
@@ -655,7 +655,7 @@
   position: relative;
   box-sizing: border-box;
   padding: 4px;
-  border-right: 1px solid #ddd;
+  border-right: 1px solid rgba(0, 0, 0, 0.12);
   vertical-align: middle;
   white-space: nowrap;
   overflow: hidden;
@@ -672,15 +672,15 @@
 }
 
 .tabulator-row .tabulator-cell.tabulator-frozen.tabulator-frozen-left {
-  border-right: 2px solid #ddd;
+  border-right: 2px solid rgba(0, 0, 0, 0.12);
 }
 
 .tabulator-row .tabulator-cell.tabulator-frozen.tabulator-frozen-right {
-  border-left: 2px solid #ddd;
+  border-left: 2px solid rgba(0, 0, 0, 0.12);
 }
 
 .tabulator-row .tabulator-cell.tabulator-editing {
-  border: 1px solid #1D68CD;
+  border: 1px solid #ee6e73;
   outline: none;
   padding: 0;
 }
@@ -725,7 +725,7 @@
 }
 
 .tabulator-row .tabulator-cell.tabulator-range-selected:not(.tabulator-range-only-cell-selected):not(.tabulator-range-row-header) {
-  background-color: #9ABCEA;
+  background-color: #ee6e73;
 }
 
 .tabulator-row .tabulator-cell .tabulator-data-tree-branch-empty {
@@ -741,8 +741,8 @@
   margin-top: -9px;
   margin-right: 5px;
   border-bottom-left-radius: 1px;
-  border-left: 2px solid #ddd;
-  border-bottom: 2px solid #ddd;
+  border-left: 2px solid rgba(0, 0, 0, 0.12);
+  border-bottom: 2px solid rgba(0, 0, 0, 0.12);
 }
 
 .tabulator-row .tabulator-cell .tabulator-data-tree-control {
@@ -852,7 +852,7 @@
 .tabulator-row.tabulator-group {
   box-sizing: border-box;
   border-bottom: 1px solid #999;
-  border-right: 1px solid #ddd;
+  border-right: 1px solid rgba(0, 0, 0, 0.12);
   border-top: 1px solid #999;
   padding: 5px;
   padding-left: 10px;
@@ -922,9 +922,9 @@
   display: inline-block;
   box-sizing: border-box;
   background: #fff;
-  border: 1px solid #ddd;
+  border: 1px solid rgba(0, 0, 0, 0.12);
   box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.2);
-  font-size: 14px;
+  font-size: 16px;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
   z-index: 10000;
@@ -958,7 +958,7 @@
 @media (hover: hover) and (pointer: fine) {
   .tabulator-menu .tabulator-menu-item:not(.tabulator-menu-item-disabled):hover {
     cursor: pointer;
-    background: #fff;
+    background: #f8f8f8;
   }
 }
 
@@ -976,18 +976,18 @@
   content: '';
   border-width: 1px 1px 0 0;
   border-style: solid;
-  border-color: #ddd;
+  border-color: rgba(0, 0, 0, 0.12);
   vertical-align: top;
   transform: rotate(45deg);
 }
 
 .tabulator-menu .tabulator-menu-separator {
-  border-top: 1px solid #ddd;
+  border-top: 1px solid rgba(0, 0, 0, 0.12);
 }
 
 .tabulator-edit-list {
   max-height: 200px;
-  font-size: 14px;
+  font-size: 16px;
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
 }
@@ -1000,7 +1000,7 @@
 
 .tabulator-edit-list .tabulator-edit-list-item.active {
   color: #fff;
-  background: #1D68CD;
+  background: #ee6e73;
 }
 
 .tabulator-edit-list .tabulator-edit-list-item.active.focused {
@@ -1008,14 +1008,14 @@
 }
 
 .tabulator-edit-list .tabulator-edit-list-item.focused {
-  outline: 1px solid #1D68CD;
+  outline: 1px solid #ee6e73;
 }
 
 @media (hover: hover) and (pointer: fine) {
   .tabulator-edit-list .tabulator-edit-list-item:hover {
     cursor: pointer;
     color: #fff;
-    background: #1D68CD;
+    background: #ee6e73;
   }
 }
 
@@ -1026,7 +1026,7 @@
 }
 
 .tabulator-edit-list .tabulator-edit-list-group {
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
   padding: 4px;
   padding-top: 6px;
   color: #333;
@@ -1064,7 +1064,7 @@
 
 .tabulator.tabulator-rtl .tabulator-header .tabulator-col {
   text-align: initial;
-  border-left: 1px solid #ddd;
+  border-left: 1px solid #aaa;
   border-right: initial;
 }
 
@@ -1085,7 +1085,7 @@
 
 .tabulator.tabulator-rtl .tabulator-row .tabulator-cell {
   border-right: initial;
-  border-left: 1px solid #ddd;
+  border-left: 1px solid rgba(0, 0, 0, 0.12);
 }
 
 .tabulator.tabulator-rtl .tabulator-row .tabulator-cell .tabulator-data-tree-branch {
@@ -1094,7 +1094,7 @@
   border-bottom-left-radius: initial;
   border-bottom-right-radius: 1px;
   border-left: initial;
-  border-right: 2px solid #ddd;
+  border-right: 2px solid rgba(0, 0, 0, 0.12);
 }
 
 .tabulator.tabulator-rtl .tabulator-row .tabulator-cell .tabulator-data-tree-control {
@@ -1103,11 +1103,11 @@
 }
 
 .tabulator.tabulator-rtl .tabulator-row .tabulator-cell.tabulator-frozen.tabulator-frozen-left {
-  border-left: 2px solid #ddd;
+  border-left: 2px solid rgba(0, 0, 0, 0.12);
 }
 
 .tabulator.tabulator-rtl .tabulator-row .tabulator-cell.tabulator-frozen.tabulator-frozen-right {
-  border-right: 2px solid #ddd;
+  border-right: 2px solid rgba(0, 0, 0, 0.12);
 }
 
 .tabulator.tabulator-rtl .tabulator-row .tabulator-col-resize-handle:last-of-type {
@@ -1145,14 +1145,14 @@ body.tabulator-print-fullscreen-hide > *:not(.tabulator-print-fullscreen) {
   margin-top: -9px;
   margin-right: 5px;
   border-bottom-left-radius: 1px;
-  border-left: 2px solid #ddd;
-  border-bottom: 2px solid #ddd;
+  border-left: 2px solid rgba(0, 0, 0, 0.12);
+  border-bottom: 2px solid rgba(0, 0, 0, 0.12);
 }
 
 .tabulator-print-table .tabulator-print-table-group {
   box-sizing: border-box;
   border-bottom: 1px solid #999;
-  border-right: 1px solid #ddd;
+  border-right: 1px solid rgba(0, 0, 0, 0.12);
   border-top: 1px solid #999;
   padding: 5px;
   padding-left: 10px;
@@ -1277,40 +1277,185 @@ body.tabulator-print-fullscreen-hide > *:not(.tabulator-print-fullscreen) {
 .tabulator {
   border: none;
   background-color: #fff;
+  width: 100%;
+  max-width: 100%;
+}
+
+.tabulator .tabulator-header {
+  color: inherit;
+}
+
+.tabulator .tabulator-header .tabulator-col {
+  border-right: none;
+}
+
+.tabulator .tabulator-header .tabulator-col .tabulator-col-content {
+  padding: 15px;
+}
+
+.tabulator .tabulator-header .tabulator-col .tabulator-col-content .tabulator-col-sorter {
+  right: -10px;
+}
+
+.tabulator .tabulator-header .tabulator-col.tabulator-col-group .tabulator-col-group-cols {
+  border-top: 1px solid rgba(0, 0, 0, 0.12);
+}
+
+.tabulator .tabulator-header .tabulator-col.tabulator-sortable .tabulator-col-title {
+  padding-right: 10px;
 }
 
 .tabulator .tabulator-header .tabulator-calcs-holder {
-  background: #f2f2f2 !important;
-  border-bottom: 1px solid #999;
+  width: 100%;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
 }
 
-.tabulator .tabulator-header .tabulator-calcs-holder .tabulator-row {
-  background: #f2f2f2 !important;
+.tabulator .tabulator-header .tabulator-frozen-rows-holder {
+  min-width: 600%;
 }
 
-.tabulator .tabulator-tableholder .tabulator-placeholder span {
-  color: #000;
+.tabulator .tabulator-header .tabulator-frozen-rows-holder:empty {
+  display: none;
 }
 
-.tabulator .tabulator-footer .tabulator-calcs-holder {
-  background: #f2f2f2 !important;
-  border-bottom: 1px solid #fff;
+.tabulator .tabulator-tableholder .tabulator-table {
+  color: inherit;
 }
 
-.tabulator .tabulator-footer .tabulator-calcs-holder .tabulator-row {
-  background: #f2f2f2 !important;
+.tabulator .tabulator-footer {
+  background-color: transparent;
+  color: inherit;
+}
+
+.tabulator .tabulator-footer .tabulator-paginator {
+  color: inherit;
+}
+
+.tabulator .tabulator-footer .tabulator-page {
+  margin: 0;
+  margin-top: 5px;
+  padding: 8px 12px;
+  border-radius: 0;
+  border-right: none;
+  background: rgba(255, 255, 255, 0.2);
+}
+
+.tabulator .tabulator-footer .tabulator-page[data-page="next"],
+.tabulator .tabulator-footer .tabulator-page:first-of-type {
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+
+.tabulator .tabulator-footer .tabulator-page[data-page="prev"],
+.tabulator .tabulator-footer .tabulator-page:last-of-type {
+  border: 1px solid rgba(0, 0, 0, 0.12);
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+
+.tabulator .tabulator-footer .tabulator-page.active {
+  color: #ee6e73;
+}
+
+.tabulator.striped .tabulator-row:nth-child(even) {
+  background-color: #f8f8f8;
+}
+
+.tabulator.striped .tabulator-row:nth-child(even).tabulator-selected {
+  background-color: #ee6e73 !important;
+}
+
+@media (hover: hover) and (pointer: fine) {
+  .tabulator.striped .tabulator-row:nth-child(even).tabulator-selectable:hover {
+    background-color: #f8f8f8;
+    cursor: pointer;
+  }
+  .tabulator.striped .tabulator-row:nth-child(even).tabulator-selected:hover {
+    background-color: #ee6e73 !important;
+    cursor: pointer;
+  }
 }
 
 .tabulator-row {
-  border-bottom: 1px solid #ddd;
+  min-height: 46px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+}
+
+.tabulator-row.tabulator-row-even {
+  background-color: #fff;
+}
+
+.tabulator-row .tabulator-cell {
+  padding: 15px;
+  border-right: none;
 }
 
 .tabulator-row .tabulator-cell:last-of-type {
   border-right: none;
 }
 
+.tabulator-row .tabulator-cell .tabulator-data-tree-control {
+  border: 1px solid #ccc;
+}
+
+.tabulator-row .tabulator-cell .tabulator-data-tree-control .tabulator-data-tree-control-collapse:after {
+  background: #ccc;
+}
+
+.tabulator-row .tabulator-cell .tabulator-data-tree-control .tabulator-data-tree-control-expand {
+  background: #ccc;
+}
+
+.tabulator-row .tabulator-cell .tabulator-data-tree-control .tabulator-data-tree-control-expand:after {
+  background: #ccc;
+}
+
+.tabulator-row.tabulator-group {
+  background: #fafafa;
+}
+
 .tabulator-row.tabulator-group span {
+  margin-left: 10px;
   color: #666;
+}
+
+.tabulator-edit-select-list {
+  background: #fff;
+}
+
+.tabulator-edit-select-list .tabulator-edit-select-list-item {
+  color: inherit;
+}
+
+.tabulator-edit-select-list .tabulator-edit-select-list-item.active {
+  color: #fff;
+}
+
+.tabulator-edit-select-list .tabulator-edit-select-list-item.active.focused {
+  outline: 1px solid rgba(255, 255, 255, 0.5);
+}
+
+@media (hover: hover) and (pointer: fine) {
+  .tabulator-edit-select-list .tabulator-edit-select-list-item:hover {
+    color: #fff;
+  }
+}
+
+.tabulator-edit-select-list .tabulator-edit-select-list-notice {
+  color: inherit;
+}
+
+.tabulator-edit-select-list .tabulator-edit-select-list-group {
+  color: inherit;
+}
+
+.tabulator.tabulator-rtl .tabulator-header .tabulator-col {
+  border-left: none;
+  border-right: none;
+}
+
+.tabulator-print-table .tabulator-print-table-group {
+  background: #fafafa;
 }
 
 .tabulator-print-table .tabulator-print-table-group span {
@@ -1318,4 +1463,20 @@ body.tabulator-print-fullscreen-hide > *:not(.tabulator-print-fullscreen) {
   color: #666;
 }
 
-/*# sourceMappingURL=tabulator_simple.css.map */
+.tabulator-print-table .tabulator-data-tree-control {
+  border: 1px solid #ccc;
+}
+
+.tabulator-print-table .tabulator-data-tree-control .tabulator-data-tree-control-collapse:after {
+  background: #ccc;
+}
+
+.tabulator-print-table .tabulator-data-tree-control .tabulator-data-tree-control-expand {
+  background: #ccc;
+}
+
+.tabulator-print-table .tabulator-data-tree-control .tabulator-data-tree-control-expand:after {
+  background: #ccc;
+}
+
+/*# sourceMappingURL=tabulator_materialize.css.map */
